<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/amarilloAdoptino"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/bienvenida"
            android:textAlignment="center"
            android:textColor="@color/naranjaAdoptino"
            android:textSize="40sp"
            android:textStyle="bold">


        </TextView>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal">

            <ListView
                android:id="@+id/listaperso"
                style="@style/Widget.AppCompat.Light.ListView.DropDown"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp">

            </ListView>

        </TableRow>

        <Button
            android:id="@+id/button13"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/violetaAdoptino"
            android:onClick="btnadoptar"
            android:text="@string/adopta"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/violetaAdoptino"
            android:onClick="btnparaadoptar"
            android:text="@string/daEnAdopcion"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/violetaAdoptino"
            android:onClick="btnreportar"
            android:text="@string/reporta"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/violetaAdoptino"
            android:onClick="btnreportados"
            android:text="@string/perdidos"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/adoptino" />

    </LinearLayout>
</ScrollView>
