<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarilloAdoptino"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="176dp"
            android:layout_height="131dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/adoptino" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/naranjaAdoptino"
            android:textStyle="bold"
            tools:textSize="40sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            app:cardBackgroundColor="#12F8F4F4"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="@color/negroAdoptino"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="56sp"
                    android:background="@color/negroAdoptino"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="56sp"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="10sp"
                    android:ems="10"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="40dp"
                        android:backgroundTint="@color/naranjaAdoptino"
                        android:onClick="registrarse"
                        android:text="@string/registrarse"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="@color/naranjaAdoptino"
                        android:onClick="iniciarSesion"
                        android:text="@string/iniciarSesion"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />

                </TableRow>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/violetaAdoptino"
                    android:textColorLink="#03A9F4" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>